# PiloTY

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  ROADMAP.md  TECHNICAL.md  pyproject.toml
piloty/: __init__.py  core.py  handler_manager.py  mcp_server.py  piloty.py  session_logger.py  utils.py
piloty/handlers/: __init__.py  base.py  ssh.py
pty_mcp/: pty_mcp.py
tests/: __init__.py  test_background_processes.py  test_basic_commands.py  test_cwd.py  test_interactive.py  test_mcp_return_values.py  test_poll_output.py  test_poll_semantics.py  test_ssh.py  test_state_determination.py
todo/: P1-01-password-auth.md  P1-02-interactive-prompt.md  P1-03-error-handling.md  P1-04-multiline-commands.md  P1-05-output-separation.md  P1-06-playground-ux.md  P2-01-python-ipython.md  P2-02-database-clients.md  P2-03-nodejs-repl.md  P2-04-debugging-tools.md  P2-05-repl-lifecycle.md  P3-01-text-editors.md  P3-02-terminal-multiplexers.md  P3-03-system-monitors.md  P3-04-pagers-viewers.md
tools/: README.md  pty_playground.py  session_viewer.py
